@@ -1,0 +1,28 @@
+<?xml version="1.0"?>
+<object>
+  <order manager="plone.portaltop" skinname="Plone Default">
+    <viewlet name="plone.header" />
+    <viewlet name="plone.personal_bar" />
+    <viewlet name="plone.app.i18n.locales.languageselector" />
+    <viewlet name="plone.path_bar" />
+  </order>
+  <order manager="plone.portalheader" skinname="Plone Default">
+    <viewlet name="plone.skip_links" />
+    <viewlet name="plone.site_actions" />
+    <viewlet name="plone.searchbox" />
+    <viewlet name="plone.logo" />
+    <viewlet name="plone.global_sections" />
+  </order>
+  <order manager="plone.contentviews" skinname="Plone Default">
+    <viewlet name="plone.contentviews" />
+    <viewlet name="plone.contentactions" />
+  </order>
+  <order manager="plone.belowcontent" skinname="Plone Default">
+    <viewlet name="plone.nextprevious" />
+    <viewlet name="plone.manage_portlets_fallback" />
+  </order>
+  <order manager="plone.portalfooter" skinname="Plone Default">
+    <viewlet name="plone.footer" />
+    <viewlet name="plone.colophon" />
+  </order>
+</object>
